Un titre pour chaque liste

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" media="all"/>
 </head>
 <body>
+    
 <!-- Emplacement des boutons -->
 <div id="content">
     <ul id="nav-reflection">
@@ -29,15 +30,13 @@
     </ul>
 
 </div>
-
+<h1 class="titre"></h1>
 <div id="result-container">
-
+   
     <div id="result">
 
     </div>
 </div>
-
-
 <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
