Affichage du descriptif Pokémon au clic

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" media="all"/>
 </head>
 <body>
-    
+   <h1 class="title">Pokémon Satoshi Tajiri</h1> 
 <!-- Emplacement des boutons -->
 <div id="content">
     <ul id="nav-reflection">
@@ -30,18 +30,20 @@
     </ul>
 
 </div>
-<h1 class="titre"></h1>
-<div id="result-container">
-   
-    <div id="result">
+<h2 class="titre"></h2>
 
-    </div>
+<div id="result-container">
+<div id="results" class=""></div>
+   
 </div>
+<div id="pokemon-detail"></div>
+
 <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="js/execute.js"></script>
 <script src="js/pokemon.js"></script>
+
 
 </body>
 </html>
