--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
     <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
           media="all"/>
     <link rel="stylesheet" type="text/css" href="css/style.css" media="all"/>
+    
 </head>
-<body>
-   <h1 class="title">Pokémon Satoshi Tajiri</h1> 
+<body>   
+<!--logo audio pika pika-->
+<audio preload="auto" src="css/pikachu.mp3" id="sound"></audio>
+<img id="click" src="images/pika.png" alt=""  width="6%" >
+
+
+
+    <a href="mailto:djermounihakima@gmail.com?subject=commentaire&amp;cc=autre@adresse.fr">Laissez un commentaire</a>
+    <a href ="https://www.cciformation54.fr/book/catalogues-formations-2017-formation-continue/" target="_blank"><h1 class="title">Pokémon</h1> </a>
+
 <!-- Emplacement des boutons -->
 <div id="content">
     <ul id="nav-reflection">
